[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/art/Player/greek warrior right_facing animation_frame.png" type="Texture" id=1]
[ext_resource path="res://assets/art/Player/greek warrior right_facing idle.png" type="Texture" id=2]
[ext_resource path="res://assets/art/Player/greek warrior right_facing animation_frame 2.png" type="Texture" id=3]
[ext_resource path="res://Player/Player_platform.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.0
height = 8.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "moving",
"speed": 8.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Moving"
length = 0.37
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.12, 0.24, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "moving" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "javelin_throw_ne"
length = 0.51
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -7, 7 ), Vector2( 2, -2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "javelin_throw_nw"
length = 0.51
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 7, 7 ), Vector2( -2, -2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "javelin_throw_se"
length = 0.51
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -7, -7 ), Vector2( 2, 2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=22]
resource_name = "javelin_throw_sw"
length = 0.51
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 7, -7 ), Vector2( -2, 2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "sword_swing_ne"
length = 0.71
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 6, -6 ), Vector2( -2, 2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "sword_swing_nw"
length = 0.71
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -6, -6 ), Vector2( 2, 2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "sword_swing_se"
length = 0.71
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 6, 6 ), Vector2( -2, -2 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "sword_swing_sw"
length = 0.71
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -6, 6 ), Vector2( 2, -2 ), Vector2( 4.76837e-07, -4.76837e-07 ) ]
}

[node name="PlayerPlatform" type="KinematicBody2D" groups=["player"]]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
rotating = true
current = true
zoom = Vector2( 0.65, 0.65 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 2 )
animation = "moving"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 3 )
anims/Moving = SubResource( 4 )
anims/RESET = SubResource( 5 )
anims/javelin_throw_ne = SubResource( 20 )
anims/javelin_throw_nw = SubResource( 19 )
anims/javelin_throw_se = SubResource( 21 )
anims/javelin_throw_sw = SubResource( 22 )
anims/sword_swing_ne = SubResource( 16 )
anims/sword_swing_nw = SubResource( 6 )
anims/sword_swing_se = SubResource( 17 )
anims/sword_swing_sw = SubResource( 18 )

[node name="Timers" type="Node" parent="."]

[node name="SpearThrowTimer" type="Timer" parent="Timers"]
process_mode = 0
wait_time = 0.25
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timers/SpearThrowTimer" to="." method="_on_SpearThrowTimer_timeout"]
